2010-02-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.csproj: Add missing indirect
	  reference.

2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs:
	  Flush.

2010-01-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
	  Track API changes.

2010-01-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlFormatter.cs: Track api changes.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlEditorService.cs:
	* MonoDevelop.Xml.Formatting/XmlFormatterWriter.cs:
	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
	  Fix warnings.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs:
	  Flush.

2009-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Fixed 'Bug
	  549703 - Customised XML file extensions are no longer
	  syntax-highlighted'.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.XmlEditor.csproj: Use \ instead of '/'
	in the Import.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.XmlEditor.csproj: Add md.targets .

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2009-10-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor.addin.xml: